fix: data when selected on dark mode

--- a/style/databases.css
+++ b/style/databases.css
@@ -410,7 +410,7 @@ label {
 }
 
 #database-data tr.active {
-	background: #d4f2f4;
+	background: var(--background-database-data-select);
 }
 
 #database-data tr:hover {
